# Rboost

./: .gitignore  .travis.yml  Cargo.toml  boston.csv  build-travis.sh
rboost/: Cargo.toml
rboost-python/: Cargo.toml
rboost-python/rboost_python/: __init__.py
rboost-python/src/: lib.rs
rboost/benches/: bench_binary.rs  bench_trees.rs
rboost/examples/: example1.rs  example_boost.rs  example_boost_binary.rs  example_dart.rs  example_dart_binary.rs  example_rf.rs  example_rf_binary.rs  example_tree.rs  example_tree_binary.rs
rboost/src/: dart.rs  data.rs  error.rs  gbt.rs  lib.rs  losses.rs  math.rs  matrix.rs  rf.rs  tree.rs  tree_all.rs  tree_bin.rs  tree_direct.rs
rboost/src/matrix/: dense.rs  mod.rs  sparse.rs
src/: data.rs  data_loading.rs  learner.rs  main.rs  math.rs  objective.rs
tinygbt/: tinygbt.py
tinygbt.rs/: Cargo.toml
tinygbt.rs/examples/: example1.rs
tinygbt.rs/src/: lib.rs  losses.rs  matrix.rs
