[package]
name = "rboost_python"
version = "0.1.0"
authors = ["Matthieu Bizien <matthieu@databiz.io>"]
edition = "2018"

[lib]
name = "rboost_python"
crate-type = ["cdylib"]

[dependencies]
#numpy = { path = "../rust-numpy/"}
# Mandatory until https://github.com/rust-numpy/rust-numpy/pull/73 is resolved
numpy = { git = "https://github.com/MatthieuBizien/rust-numpy.git"}
ndarray = "0.12"
rboost = {path = "../rboost"}
pyo3 = {version = "0.4.1", features = ["extension-module"] }
