[package]
name = "rboost"
version = "0.1.0"
authors = ["Matthieu Bizien <matthieu@databiz.io>"]
edition = "2018"

[dependencies]
# Git dependency until https://github.com/Emerentius/ord_subset/issues/4 is resolved
ord_subset = {"git"="https://github.com/expenses/ord_subset.git"}
ordered-float = "1.0"
failure = "0.1.2"
rand = "0.5.5"
flame = "0.2.2"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
cpuprofiler = "0.0.3"
criterion = "0.2"
rustlearn = "0.5.0"
serde_json = "1.0"
csv = "1"

[[bench]]
name = "bench_trees"
harness = false
